Sonar issues
Sonar lint issues fixed